vlib/v/parser/tests/generic_struct_parameter_err.out
vlib/v/parser/tests/generic_struct_parameter_err.vv:10:17: error: the parameter type name of a generic struct, must be a single capital letter placeholder name, like T or X, or a non-generic type name like int, string, etc.
    8 | struct MyContainer<T> {
    9 | mut:
   10 |     lst LinkedList<MyNode<T>>
      |                    ~~~~~~~~~
   11 | }
   12 |
